kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ia-llm
  labels:
    name: ia-llm
    app: llm-stack
