kubernetes/ollama-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-webui-deployment
  namespace: ia-llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-webui
  template:
    metadata:
      labels:
        app: ollama-webui
    spec:
      containers:
        - name: ollama-webui
          image: ghcr.io/ollama-webui/ollama-webui:main
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "250m"
