kubernetes/ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deployment
  namespace: ia-llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:latest
          args: ["serve"]
          ports:
            - containerPort: 11434
          volumeMounts:
            - name: pvc
              mountPath: /root/.ollama
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "1"
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: llm-models-pvc
