kubernetes/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-service
  namespace: ia-llm
spec:
  selector:
    app: ollama
  type: NodePort
  ports:
    - port: 11434
      targetPort: 11434
