kubernetes/ollama-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-webui-service
  namespace: ia-llm
spec:
  selector:
    app: ollama-webui
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30081
