kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-service
  namespace: ia-llm
spec:
  type: NodePort
  selector:
    app: llm-server
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
